# work-hours-bot

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: __init__.py  callback.py  dependency.py  factory.py  keyboards.py
src/api/handlers/: __init__.py  basic.py  period.py  session.py
src/api/middlewares/: di.py
src/application/: clock.py  exceptions.py
src/application/services/: session.py  user.py
src/domain/models/: entity.py  session.py  user.py
src/domain/repositories/: session.py  user.py
src/infrastructure/: api_config.py  clock.py  env.py
src/infrastructure/db/: config.py  engine.py  models.py  session.py
src/infrastructure/repositories/: async_base.py  session.py  user.py
tests/: conftest.py
tests/integration/test_repositories/: test_session_repo.py  test_user_repo.py
tests/unit/test_domain/: test_session.py  test_user.py
tests/unit/test_services/: test_session_service.py  test_user_service.py
